--- a/webapp/chrome/manifest.json
+++ b/webapp/chrome/manifest.json
@@ -9,7 +9,7 @@
 	"http://d2kg4h6gsenx6a.cloudfront.net/main.html"
     ],
     "launch": {
-	"web_url": "d2kg4h6gsenx6a.cloudfront.net/main.html"
+	"web_url": "http://d2kg4h6gsenx6a.cloudfront.net/main.html"
     }
   }
 }
