--- a/platforms/ios/Dogecoin Balance Wow/Dogecoin Balance Wow-Info.plist
+++ b/platforms/ios/Dogecoin Balance Wow/Dogecoin Balance Wow-Info.plist
@@ -15,7 +15,7 @@
     <key>CFBundleIcons~ipad</key>
     <dict/>
     <key>CFBundleIdentifier</key>
-    <string>net.edrake.kittehcoinbalance</string>
+    <string>net.edrake.dogecoinbalancewow</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
