--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ tmp
 platforms/android/assets/www
 platforms/ios/www
 platforms/ios/CordovaLib/CordovaLib.xcodeproj/xcuserdata/
-platforms/ios/KittehCoin\ Balance.xcodeproj/project.xcworkspace/
-platforms/ios/KittehCoin\ Balance.xcodeproj/project.pbxproj/
+platforms/ios/Dogecoin\ Balance\ Wow.xcodeproj/project.xcworkspace/
+platforms/ios/Dogecoin\ Balance\ Wow.xcodeproj/project.pbxproj/
 console.log
 webapp/chrome.zip
 webapp/www/*
