changed images, css, and config files to prepare for wp8 platform

--- a/platforms/wp8/Dogecoin_Balance_Wow.csproj
+++ b/platforms/wp8/Dogecoin_Balance_Wow.csproj
@@ -252,6 +252,9 @@
         <Content Include="www\css\bootstrap.min.css" />
     </ItemGroup>
     <ItemGroup>
+        <Content Include="www\css\custom.css" />
+    </ItemGroup>
+    <ItemGroup>
         <Content Include="www\css\index.css" />
     </ItemGroup>
     <ItemGroup>
